RESOLVED FIXED 280926
[IFC][Integration] Missing layout call on simplified layout root
https://bugs.webkit.org/show_bug.cgi?id=280926
Summary [IFC][Integration] Missing layout call on simplified layout root
alan
Reported 2024-10-04 18:20:43 PDT
ssia
Attachments
[fast-cq]Patch (3.19 KB, patch)
2024-10-04 18:31 PDT, alan
no flags
alan
Comment 1 2024-10-04 18:31:08 PDT
Created attachment 472820 [details] [fast-cq]Patch
EWS
Comment 2 2024-10-05 05:12:10 PDT
Committed 284728@main (fb20fad64abf): <https://commits.webkit.org/284728@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472820 [details].
Radar WebKit Bug Importer
Comment 3 2024-10-05 05:13:14 PDT
Note You need to log in before you can comment on or make changes to this bug.