[IFC][Integration] Missing layout call on simplified layout root https://bugs.webkit.org/show_bug.cgi?id=280926

Reviewed by Antti Koivisto.

This patch ensures we run layout on boxes with simplified layout set.

* LayoutTests/fast/dynamic/simplified-layout-layout-assert-expected.txt: Added.
* LayoutTests/fast/dynamic/simplified-layout-layout-assert.html: Added.
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::layoutInlineContent):

Canonical link: https://commits.webkit.org/284728@main